@@ -10,7 +10,7 @@
 #
 # Created on Wednesday, May 21 2003 by Alexey Dokuchaev <danfe@regency.nsu.ru>
 #
-#	$Id: Makefile.FreeBSD,v 1.12 2005/09/14 14:20:02 vvd0 Exp $
+#	$Id: Makefile.FreeBSD,v 1.13 2005/09/22 12:49:14 vvd0 Exp $
 #
 
 CC=gcc
@@ -19,7 +19,6 @@ SV_DIR=${MAINDIR}/source
 QWDTOOLS_DIR=${MAINDIR}/source/qwdtools
 
 DO_CFLAGS =	${CFLAGS} -funsigned-char -DSERVERONLY -DUSE_PR2
-# -DREGEX
 WITH_OPTIMIZED_CFLAGS = YES
 
 USE_ASM=-Did386
